...
            }
        }
    }
    
    enum class InvitationState {
        Hidden,
        Invitations,
        NoInvitations;
        
        companion object {
            
            fun fromExpanded(expanded: Boolean, hasInvitations: Boolean): InvitationState {
                return if (expanded) {
...
                    Card(
                        colors = innerCardColor, modifier = Modifier
                            .padding(10.dp)
                            .fillMaxWidth()
                    ) {
                        DetailedInfo(
                            title = "Change in Glucose",
                            name = R.string.reading,
                            lastInstance = pillData.lastGlucose,
                            modifier = Modifier.padding(5.dp)
                        ) {
                            Row {
                                Text(
...
                                    modifier = Modifier.padding(end = 15.dp)
                                )
                            }
                        }
                        HorizontalDivider()
                        DetailedInfo(
                            title = "Active Insulin",
                            name = R.string.bolus,
                            lastInstance = pillData.lastBolus,
                            modifier = Modifier.padding(5.dp)
                        ) {
                            Row(verticalAlignment = Alignment.Bottom) {
                                val text = pillData.activeInsulin?.amount?.let {
...
                                    modifier = Modifier.padding(start = 2.dp, end = 15.dp)
                                )
                            }
                        }
                        HorizontalDivider()
                        DetailedInfo(
                            title = "Active Carbs",
                            name = R.string.entry,
                            lastInstance = pillData.lastCarbEntry,
                            modifier = Modifier.padding(5.dp)
                        ) {
                            Row(verticalAlignment = Alignment.Bottom) {
                                Text(
...
